--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -167,9 +167,9 @@
         it('inactivate chain is called in reversed order, from last route to first', async() => {
           const deactivatedPaths = [];
           router.setRoutes([
-            {path: '/a', inactivate: context => deactivatedPaths.push(context.inactivatedRoute.path), children: [
-              {path: '/b', inactivate: context => deactivatedPaths.push(context.inactivatedRoute.path), children: [
-                {path: '/c', inactivate: context => deactivatedPaths.push(context.inactivatedRoute.path), component: 'x-users-view'},
+            {path: '/a', inactivate: context => deactivatedPaths.push(context.invocationPath.path), children: [
+              {path: '/b', inactivate: context => deactivatedPaths.push(context.invocationPath.path), children: [
+                {path: '/c', inactivate: context => deactivatedPaths.push(context.invocationPath.path), component: 'x-users-view'},
               ]},
             ]},
             {path: '/', component: 'x-home-view'},
@@ -190,6 +190,9 @@
           ]);
 
           await router.render('/a');
+
+          expect(inactivateFunction).to.not.have.been.called;
+
           await router.render(lastResolvedRoute);
 
           expect(inactivateFunction).to.have.been.called.once;
@@ -198,8 +201,8 @@
           expect(contextParam.pathname).to.equal(lastResolvedRoute);
           expect(contextParam.route.path).to.equal(lastResolvedRoute);
           expect(contextParam.route.component).to.equal(lastComponentToRender);
-          expect(contextParam.inactivatedRoute.path).to.equal('/a');
-          expect(contextParam.inactivatedRoute.component).to.equal('x-home-view');
+          expect(contextParam.invocationPath.path).to.equal('/a');
+          expect(contextParam.invocationPath.component).to.equal('x-home-view');
         });
 
         it('inactivate is not called for same routes in new resolve pass', async() => {
@@ -289,6 +292,42 @@
 
           expect(outlet.children[0].tagName).to.match(/x-users-view/i);
           verifyActiveRoutes(router, ['/a', '/b']);
+        });
+      });
+
+      describe('redirect.from and context.from values for dynamic redirects', () => {
+        let router;
+        beforeEach(() => {
+          router = new Vaadin.Router(outlet);
+        });
+
+        afterEach(() => {
+          router.unsubscribe();
+        });
+
+        const from = '/a/b/c';
+        const redirectFunction = context => {
+          const redirectObject = context.redirect('/d');
+          expect(redirectObject.redirect.from).to.be.equal(from);
+          return redirectObject;
+        };
+        const verificationAction = context => {
+          expect(context.from).to.be.equal(from);
+        };
+
+        it('action with redirect has its context.from and redirect.from populated correctly', async() => {
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', children: [
+                {path: '/c', action: redirectFunction}
+              ]},
+            ]},
+            {path: '/d', component: 'x-home-view', action: verificationAction}
+          ]);
+
+          await router.render(from);
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
         });
       });
 
